<resources>
    <string name="app_name">Movify</string>

    <!--string resources for view pager headers -->
    <string name="movies_classification_genre">GENRE</string>
    <string name="movies_classification_trending">TRENDING</string>
    <string name="movies_classification_top_rated">TOP RATED</string>
    <string name="movies_classification_upcoming">UPCOMING</string>

    <!-- string resources for detail page -->
    <string name="header_synopsis">SYNOPSIS</string>
    <string name="header_cast">CAST</string>
    <string name="header_similar_movies">SIMILAR MOVIES</string>
    <string name="header_reviews">REVIEWS</string>
    <string name="bookmark_content_description">A button to bookmark your favourite movies </string>
    <string name="share_menu_title">Share</string>
    <string name="favourite_menu_title">Favourite</string>
    <string name="bookmark_done_text">Added to Favourites</string>
    <string name="retry_connecting">Please check your internet connection</string>

    <!-- strings for favourite movies page -->
    <string name="bookmark_removed_text">Removed from Favourites</string>
    <string name="undo_text">UNDO</string>

    <!-- string resource for cast details page-->
    <string name="close_button_content_description">A button to close the details of and return back to movie page</string>

    <!-- string resource of activity label -->
    <string name="favourite_activity_label">Favourite Movies</string>

    <!-- string resources for main activity -->
    <string name="no_internet_message">Can\'t connect to the internet</string>
    <string name="try_again_button_label">Try Again</string>

</resources>
