<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_movie_detail_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/tv_movie_detail_name"
                    app:layout_constraintTop_toTopOf="@+id/tv_movie_detail_name"
                    tools:text="2017" />

                <TextView
                    android:id="@+id/tv_movie_detail_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:paddingBottom="24dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:paddingRight="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="24dp"
                    android:singleLine="true"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/youtube_player_fragment_movie_detail_trailer"
                    tools:text="Fast and Furious Presents Hobbs" />

                <fragment
                    android:name="com.google.android.youtube.player.YouTubePlayerSupportFragment"
                    android:id="@+id/youtube_player_fragment_movie_detail_trailer"
                    android:layout_width="0dp"
                    android:layout_height="250dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <android.support.v7.widget.AppCompatRatingBar
                    android:id="@+id/rb_movie_detail_rating"
                    style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:numStars="10"
                    android:theme="@style/RatingBarCustomStyle"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_movie_detail_name"
                    app:layout_constraintStart_toStartOf="@+id/tv_movie_detail_name" />

                <ImageButton
                    android:id="@+id/ib_movie_detail_bookmark"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="225dp"
                    android:contentDescription="@string/bookmark_content_description"
                    android:background="@drawable/bookmark_button"
                    android:tint="@android:color/holo_red_light"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/youtube_player_fragment_movie_detail_trailer"
                    app:srcCompat="@drawable/baseline_star_border_black_36" />


            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:elevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_movie_detail_synopsis_fixed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingEnd="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="8dp"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:text="@string/header_synopsis"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/tv_movie_detail_synopsis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    tools:text="A grate movie worthy of five stars, greate action, adventure and thriller" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:elevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_movie_detail_cast_fixed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingEnd="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="8dp"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:text="@string/header_cast"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_movie_detail_cast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ProgressBar
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:id="@+id/pb_movie_detail_cast_loading"
                    android:layout_gravity="center"
                    android:visibility="invisible" />
                </FrameLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:elevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_movie_detail_similar_movies_fixed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingEnd="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="8dp"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:text="@string/header_similar_movies"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_movie_detail_similar_movies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ProgressBar
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:id="@+id/pb_movie_detail_similar_loading"
                    android:layout_gravity="center"
                    android:visibility="invisible" />
            </FrameLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:elevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_movie_detail_reviews_fixed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingEnd="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="8dp"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:text="@string/header_reviews"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_movie_detail_reviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>